# goit-webeng-hw02

Module2_WEB_MainTask/: Dockerfile  UML_BotAssistant_GoIT.drawio  data.pickle  main.py  pyproject.toml  variables.py
Module2_WEB_MainTask/bot_assistant/: __init__.py  book.py  bot.py  data.py  display.py  error_handlers.py  fields.py  record.py
